fix tooltip cutting off

--- a/server/static/sass/_base.scss
+++ b/server/static/sass/_base.scss
@@ -60,7 +60,6 @@
 }
 
 .tooltip-inner {
-  height: 18px;
   line-height: 18px;
   font-size: 11px;
   font-weight: normal;
